# cuda-project

./: CMakeLists.txt  README.md  data.h  generate_meta.py  main.cu  pyproject.toml  spmm_base.h  spmm_maxk.cu  spmm_maxk.h  trace.h  util.h
graphs/: ddi.indptr
