[tool.poetry]
name = "cuda-project"
version = "0.1.0"
description = ""
authors = ["naomiyjchen <naomichen.yj@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24"
scipy = "^1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

